--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,9 @@
 .container-fluid.border-top .row.my-4.justify-content-between .col-lg-2 .text-center.border.text-body-tertiary.rounded {
   font-size: 20px;
 }
+.container-fluid.border-top .row.justify-content-start {
+  font-size: 13px;
+}
 .container-fluid.border-top .row.my-4 {
   font-size: 13px;
 }
@@ -55,6 +58,10 @@
 }
 
 .row.rounded-3.mb-3 {
+  background-color: rgba(53, 53, 94, 0.877);
+}
+
+.container-fluid.border-top .row.d-flex.align-content-center.justify-content-center.mx-2.my-3 {
   background-color: rgba(53, 53, 94, 0.877);
 }
 
